services/products/deployment/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: products
  labels:
    app: products
    version: v1
spec:
  selector:
    matchLabels:
      app: products
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"
      labels:
        app: products
        version: v1
    spec:
      containers:
      - image: products:1
        name: products
        ports:
        - containerPort: 3000
          name: products
      restartPolicy: Always    
---
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    app: products
spec:
  type: NodePort
  ports:
    - port: 3000  
      protocol: TCP
      name: http
  selector:
    app: products
---
