services/products/deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products
spec:
  hosts:
  - products
  http:
  - route:
    - destination:
        host: products
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: products
spec:
  host: products
  subsets:
  - name: v1
    labels:
      version: v1
